Nu burde alt gerne virke Det er stadig meget grimt

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,8 @@
 	<title>Lobby</title>
 </head>
 <body>
-	<a href="./indbetal">Indbetaling</a>
-	<a href="./udbetal">Udbetaling</a>
+	<a href="./indbetaling">Indbetaling</a><br>
+	<a href="./udbetaling">Udbetaling</a><br>
+	<a href="./admin">Admin panel</a><br>
 </body>
 </html>
