--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<p style="color: red" id="errorMessage"></p>
-		<form action="#" onsubmit="login()">
+		<form action="#" onsubmit="login(event); return false">
 			<input
 				type="text"
 				name="username"
@@ -24,7 +24,8 @@
 			<input type="submit" value="Log ind" />
 		</form>
 		<script>
-			function login() {
+			function login(e) {
+				e.preventDefault();
 				const username = document.getElementById("username");
 				const password = document.getElementById("password");
 
