--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,8 @@
 		<p>Du er logget ind som <%= username %></p>
 		<button onclick="logout()">Log ud her</button><br /><br />
 
+		<a href="/indbetaling">Indbetaling menu</a>
+
 		<div>
 			<% if (admin) { %>
 			<a href="/admin">Admin panel</a>
