--- a/views/indbetaling.ejs
+++ b/views/indbetaling.ejs
@@ -36,6 +36,7 @@
 			style="display: none"
 			onsubmit="makeAktie(event, this)"
 		>
+			<p>Brugeren findes. Opret aktie her:</p>
 			<label for="aktie">Vælg aktie:</label>
 			<select name="aktieType">
 				<% aktieTypes.forEach((aktie) => { %>
