--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
 		<button onclick="logout()">Log ud her</button><br /><br />
 
 		<a href="/indbetaling">Indbetaling menu</a>
+		<a href="/udbetaling">Udbetaling menu</a>
 
 		<div>
 			<% if (admin) { %>
