--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -26,7 +26,7 @@
 		<h2>Get user</h2>
 		<form action="#" onsubmit="getUser(event, this); false">
 			<label for="username">Username: </label><input id="username" type="text">
-			<label for="wildcard">Wildcard: </label><input id="wildcard" type="checkbox">
+			<label for="wildcard">Wildcard: </label><input id="wildcard" type="checkbox" value="on">
 			<input type="submit" value="Find">
 		</form>
 
@@ -87,7 +87,7 @@
 			function getUser(e, form) {
 				e.preventDefault();
 				const username = form.username.value;
-				const wildcard = form.wildcard.value;
+				const wildcard = form.wildcard.checked;
 				let url = new URL('/admin/api/user', window.location.origin);
 				url.searchParams.append('username', username);
 				url.searchParams.append('wildcard', wildcard);
